# ludum-dare-50

./: .gitignore  .gitmodules  Cargo.toml  README.md  book.toml  game.tiled-project  game.tiled-session  index.html  launch_anim_stitcher.sh  renderdoc_settings.cap  requirements.txt  rust-toolchain.toml
.github/workflows/: build.yml  gen-docs.yml
assets/ewpratten/: .gitignore
assets/www/: CNAME  README.txt  index.html
automation/: project_root.py  sprite_types.py
automation/anim_stitcher/: Cargo.toml  __main__.py  stitcher.py  ui.py
automation/anim_stitcher/src/: generator.rs  lib.rs
automation/qt_common/: __init__.py  dialog.css  qt_app_wrapper.py  qt_dialog_style.py  qt_lines.py  qt_window_center.py
automation/scripts/: post_process_release_linux.sh  post_process_release_windows.sh
book/: 404.html  anim-stitcher.html  artist-information.html  design-asset-manager.html  development-environment.html  getting-started.html  index.html  infrastructure-overview.html  introduction.html  print.html  searchindex.js  searchindex.json  software-design.html
docs/: SUMMARY.md  anim-stitcher.md  artist-information.md  development-environment.md  getting-started.md  introduction.md
game/: README.md
game/auto_stitch/: README.md
game/desktop_wrapper/: Cargo.toml
game/desktop_wrapper/src/: cli.rs  debug_profiling.rs  logging.rs  main.rs
game/game_logic/: Cargo.toml  build.rs
game/game_logic/src/: coord_convert.rs  global_resource_package.rs  lib.rs  project_constants.rs
game/game_logic/src/asset_manager/: datastore.rs  json.rs  mod.rs  sprite_types.rs  texture.rs
game/game_logic/src/discord/: ipc.rs  mod.rs  signal.rs
game/game_logic/src/model/: mod.rs  player.rs  world_object.rs  world_object_package.rs
game/game_logic/src/persistent/: mod.rs  save_state.rs  settings.rs
game/game_logic/src/rendering/: core_renderer_sm.rs  event_loop.rs  mod.rs
game/game_logic/src/rendering/screens/: loading_screen.rs  mod.rs  sm_failure_screen.rs
game/game_logic/src/rendering/utilities/: anim_texture.rs  map_render.rs  mod.rs  size_mismatch.rs  vram_anim.rs
game/game_logic/src/scenes/: cutscenes.rs  main_menu.rs  mod.rs  pause_menu.rs  player_interaction.rs  test_fox.rs
rustdoc/: crates.js  search-index.js  settings.html  source-files.js
rustdoc/adler32/: all.html  fn.adler32.html  index.html  struct.RollingAdler32.html
rustdoc/app_dirs2/: all.html  enum.AppDataType.html  enum.AppDirsError.html  fn.app_dir.html  fn.app_root.html  fn.data_root.html  fn.get_app_dir.html  fn.get_app_root.html  fn.get_data_root.html  fn.sanitized.html  index.html  struct.AppInfo.html
rustdoc/colored/: all.html  enum.Color.html  index.html  struct.ColoredString.html  struct.Style.html  trait.Colorize.html
rustdoc/desktop_wrapper/: all.html  fn.main.html  index.html  sidebar-items.js
rustdoc/discord_sdk/: all.html  enum.DiscordApp.html  enum.DiscordMsg.html  enum.Event.html  index.html  sidebar-items.js  struct.Discord.html  struct.OffsetDateTime.html  struct.Snowflake.html  struct.Subscriptions.html  trait.DiscordHandler.html  type.AppId.html
rustdoc/fern/: all.html  enum.InitError.html  fn.log_file.html  index.html  struct.Dispatch.html  struct.FormatCallback.html  struct.Output.html  struct.Panic.html  type.Filter.html  type.Formatter.html
rustdoc/game_logic/: all.html  fn.entrypoint.html  index.html  sidebar-items.js
rustdoc/include_flate/: all.html  index.html  macro.flate!.html  macro.flate.html  sidebar-items.js
rustdoc/include_flate_codegen/: all.html  index.html  macro.proc_macro_hack_deflate_file!.html  macro.proc_macro_hack_deflate_file.html  macro.proc_macro_hack_deflate_utf8_file!.html  macro.proc_macro_hack_deflate_utf8_file.html  sidebar-items.js
rustdoc/include_flate_codegen_exports/: all.html  index.html  macro.deflate_file!.html  (+4 more)
(+13519 files in other folders)
