[package]
name = "anim_stitcher"
publish = false
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
build-helper = { version = "0.1.1", optional = true }
image = { version = "0.24.1", optional = true }
regex = { version = "1.5.5", optional = true }

[features]
default = []
generator = ["build-helper", "image", "regex"]
