[package]
name = "desktop_wrapper"
publish = false
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
game_logic = { version = "*", path = "../game_logic" }
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
fern = { version = "0.6", features = ["colored"] }
thiserror = "1.0.30"
profiling = { version = "1.0.5", features = ["profile-with-puffin"] }
chrono = "0.4.19"
log = "0.4.14"
clap = { version = "3.1.6", features = ["derive"] }
puffin_http = "0.10.0"
puffin = "0.13.1"

[dev-dependencies]
puffin_viewer = "0.11.0"
