[package]
name = "game_logic"
publish = false
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
raylib = { version = "3.7", path = "../../third_party/raylib-rs/raylib" }
sad_machine = { version = "1.0", path = "../../third_party/sm" }
log = "0.4.14"
profiling = "1.0.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
directories = "4.0.1"
chrono = { verison = "0.4.19", features = ["serde"] }
discord-sdk = "0.3.0"