[package]
name = "game_logic"
publish = false
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
raylib = { version = "3.7", path = "../../third_party/raylib-rs/raylib", features = [
    "with_serde",
    "nalgebra_interop"
] }
sad_machine = { version = "1.0", path = "../../third_party/sm" }
tokio = { version = "1.17.0", features = ["fs", "sync"] }
log = "0.4.14"
profiling = "1.0.5"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
directories = "4.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
discord-sdk = "0.3.0"
rust-embed = { version = "6.2.0", features = ["compression"] }
thiserror = "1.0.30"
# nalgebra = { version = "0.30.1", features = ["serde"] }
approx = "0.5.1"
poll-promise = { version = "0.1.0", features = ["tokio"] }
tempfile = "3.3.0"
nalgebra = "0.30.1"
tiled = { version = "0.10.1", path = "../../third_party/rs-tiled" }
